--- a/speakers.html
+++ b/speakers.html
@@ -74,7 +74,7 @@ Licence URI: http://www.os-templates.com/template-terms
 			<strong><a href="https://www.benjaminrosman.com/" target="_blank">Benjamin Rosman</a></br>
 			<a href="https://www.wits.ac.za/csam/" target="_blank">School of Computer Science and Applied Mathematics</a><br/><a href="https://www.wits.ac.za/" target="_blank">University of the Witwatersrand</a></br></br>
 			</strong></br>
-			<b>Collaboration under uncertainty</b></br>12.00 CEST</br>
+			<b>Modelling Imprecise Human Collaborators</b></br>12.00 CEST</br>
                         </br> 
 		</p>
 	</div>
