--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@ Licence URI: http://www.os-templates.com/template-terms
 		<div id="content" style="width:95%; text-align:center; margin:10px">
 <div class="container" style="text-align:justify; font-size:18px;">
 </br></br>
+
+<strong>Journal Special Issue:</strong></br></br>
+
+Contributors to the workshop will be invited to submit extended versions of the manuscripts to a topical collection (special issue) at <a href="https://www.springer.com/journal/521/updates/19055662" target="_blank">Neural Computing and Applications</a>.
+</br>Submissions will be peer reviewed consistent with the journal practices.
+</br></br>
+
 A slew of advances in the field of reinforcement learning (RL) have resulted in significant improvements in learning efficiency for autonomous agents and robots. 
 However, a vast majority of these works fail to consider human and other contextual factors, which are important to consider from a practical standpoint, in terms of increased trustworthiness in human-robot scenarios. 
 Recently, there has been an increasing degree of focus on auxiliary performance measures such as avoiding unsafe actions during learning, providing human-interpretable solutions and learning context-aware policies in general. 
