--- a/program.html
+++ b/program.html
@@ -28,14 +28,12 @@ td, th {
 }
 
 tr:nth-child(even) {
-  background-color: #000000;
+  background-color: #dddddd;
 }
 
-.div-white {
-        background-color: #FFFFFF;
+.a_link {
+    background-color: #dddddd;
 }
- 
-
 </style>
 
 </head>
@@ -66,18 +64,140 @@ tr:nth-child(even) {
   <div class="rnd">
     <div id="container " class="clear text-center">
       <!-- ####################################################################################################### -->
-		<div id="content" class="div-white" style="width:95%; text-align:center; margin:10px">
+		<div id="content" style="width:95%; text-align:center; margin:10px">
 
-<div class="div-white" style="font-size:18px;">
+<div class="container" style="font-size:18px;">
+<table>
+  <tr>
+    <th><a href="https://www.timeanddate.com/time/zones/utc" target="_blank">UTC time</a></th>
+    <th>Speaker</th>
+    <th>Topic</th>
+  </tr>
+  <tr>
+    <td>08:30</td>
+    <td colspan="2"><b>Welcome and introduction</b></td>
+  </tr>
+  <tr>
+    <td rowspan="3">08:35</td>
+    <td rowspan="3" colspan="2"><b>Contribution talks - Session 1</b><br>
+<ul>
+<li><a href="submission_3.pdf" target="_blank">Should I Trust You? Incorporating Unreliable Expert Advice in Human-Agent Interaction</a><br><i>Tamlin Love, Ritesh Ajoodha and Benjamin Rosman</i>
+</li>
+<li><a href="submission_8.pdf" target="_blank">Mixing Human Demonstrations with Self-Exploration in Experience Replay for Deep Reinforcement Learning</a><br><i>Akansel Cosgun and Dylan Klein</i>
+</li></ul></td>
+</tr><tr></tr><tr></tr>
 
-</br></br>
-<font size="+2"><b>See the program</b> in</font></br></br>
+  <tr>
+    <td>09:00</td>
+    <td><a class="a_link" href="speakers.html#pvamplew">Peter Vamplew</a></td>
+    <td>Multiobjective Approaches to Human-Aligned Reinforcement Learning</td>
+  </tr>
 
-<a href="program_aest.html">Australian Eastern Standard Time</a></br></br>
-<a href="program_clt.html">Chilean Standard Time</a></br></br>
-<a href="program_cest.html">Central European Summer Time</a></br></br>
-<a href="program_utc.html">Coordinated Universal Time</a></br><br>
-This is a <b>free event</b>. Click <a href="https://registrationharl.eventbrite.com.au" target="_blank">here</a> to register.<br><br>
+  <tr>
+    <td>09:30</td>
+    <td><a href="speakers.html#cweber">Cornelius Weber</a></td>
+    <td>Hybrid Neural Learning for Interactive Robots</td>
+  </tr>
+
+  <tr>
+    <td>10:00</td>
+    <td><a class="a_link" href="speakers.html#brosman">Benjamin Rosman</a></td>
+    <td>Modelling Imprecise Human Collaborators</td>
+  </tr>
+
+  <tr>
+    <td>10:30</td>
+    <td><a href="speakers.html#jkober">Jens Kober</a></td>
+    <td>Reinforcement Learning with Interactive Corrections</td>
+  </tr>
+
+  <tr>
+    <td>11:00</td>
+    <td colspan="2"><b>Break</b></td>
+  </tr>
+
+  <tr>
+    <td rowspan="3">11:15</td>
+    <td colspan="2" rowspan="3"><b>Contribution talks - Session 2</b>
+<ul>
+<li><a href="submission_6.pdf" target="_blank">Explanations In, Explanations Out: Human-in-the-Loop Social Navigation Learning</a><br><i>Jakob Karalus, Amar Halilovic and Felix Lindner</i>
+</li>
+<li><a href="submission_7.pdf" target="_blank">Learning Proxemic Behavior Using Reinforcement Learning with Cognitive Agents</a><br><i>Cristian Camilo Millán Arias, Bruno Fernandes and Francisco Cruz</i>
+</li>
+</ul>
+</td>
+  </tr><tr></tr><tr></tr>
+
+  <tr>
+    <td>11:30</td>
+    <td><a class="a_link" href="speakers.html#rdazeley">Richard Dazeley</a></td>
+    <td>Broad-XAI: Human-aligned conversational explanations</td>
+  </tr>
+
+  <tr>
+    <td>12:00</td>
+    <td><a href="speakers.html#asciutti">Alessandra Sciutti</a></td>
+    <td>More Humane Learning</td>
+  </tr>
+
+  <tr>
+    <td>12:30</td>
+    <td><a class="a_link" href="speakers.html#bfernandes">Bruno Fernandes</a></td>
+    <td>Reinforcement Learning for Robot Control and Interaction</td>
+  </tr>
+
+  <tr>
+    <td>13:00</td>
+    <td><a href="speakers.html#mtaylor">Matthew Taylor</a></td>
+    <td>Agents learning from humans -- what the heck do you want me to do?</td>
+  </tr>
+
+  <tr>
+    <td>13:30</td>
+    <td colspan="2"><b>Break</b></td>
+  </tr>
+
+  <tr>
+    <td rowspan="3">13:45</td>
+    <td colspan="2" rowspan="3"><b>Contribution talks - Session 3</b>
+<ul>
+<li><a href="submission_5.pdf" target="_blank">Policy Regularization for Legible Behavior</a><br><i>Michele Persiani</i>
+</li>
+<li><a href="submission_9.pdf" target="_blank">Explainable Deep Reinforcement Learning Using Introspection in a Non-episodic Task</a><br><i>Angel Ayala, Francisco Cruz, Bruno Fernandes and Richard Dazeley</i>
+</li>
+</ul></td>
+  </tr><tr></tr><tr></tr>
+
+  <tr>
+    <td>14:00</td>
+    <td><a class="a_link" href="speakers.html#gkonidaris">George Konidaris</a></td>
+    <td>Grounded Symbolic Representations for Human-Robot Communication</td>
+  </tr>
+
+  <tr>
+    <td>14:30</td>
+    <td><a href="speakers.html#wbknox">W. Bradley Knox</a></td>
+    <td>Reward (Mis)design for Autonomous Driving</td>
+  </tr>
+
+  <tr>
+    <td>15:00</td>
+    <td><a class="a_link" href="speakers.html#ppilarski">Patrick Pilarski</a></td>
+    <td>Constructivism in Tightly Coupled Human Machine Interfaces</td>
+  </tr>
+
+  <tr>
+    <td>15:30</td>
+    <td><a href="speakers.html#fleno">Felipe Leno Da Silva</a></td>
+    <td>Action Advising for Accelerating Multiagent Reinforcement Learning</td>
+  </tr>
+
+  <tr>
+    <td>16:00</td>
+    <td colspan="2"><b>Farewell and conclusions</b></td>
+  </tr>
+
+</table>
 </div>
 
 		</div>
