--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ Contributors to the workshop will be invited to submit extended versions of the 
 </br>Submissions will be peer reviewed consistent with the journal practices.
 </br></br>
 
+<strong>Workshop description:</strong></br></br>
+
 A slew of advances in the field of reinforcement learning (RL) have resulted in significant improvements in learning efficiency for autonomous agents and robots. 
 However, a vast majority of these works fail to consider human and other contextual factors, which are important to consider from a practical standpoint, in terms of increased trustworthiness in human-robot scenarios. 
 Recently, there has been an increasing degree of focus on auxiliary performance measures such as avoiding unsafe actions during learning, providing human-interpretable solutions and learning context-aware policies in general. 
