--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <li><a style="font-size: 20px" href="speakers.html" data-target="speakers">Speakers</a></li>
         <li><a style="font-size: 20px" href="cfp.html" data-target="cfp">Submissions</a></li>
         <li><a style="font-size: 20px" href="program.html" data-target="program">Program</a></li>
-        <li><a style="font-size: 20px" href="https://registrationharl.eventbrite.com.au" target="_blank">Registration</a></li>
+        <li><a style="font-size: 20px" href="videos.html" data-target="videos">Videos</a></li>
       </ul>
     </div>
     <!-- ###### -->
