--- a/videos.html
+++ b/videos.html
@@ -53,7 +53,7 @@ tr:nth-child(even) {
         <li><a style="font-size: 20px" href="speakers.html" data-target="speakers">Speakers</a></li>
         <li><a style="font-size: 20px" href="cfp.html" data-target="cfp">Submissions</a></li>
         <li><a style="font-size: 20px" href="program.html" data-target="program">Program</a></li>
-        <li><a style="font-size: 20px" href="https://registrationharl.eventbrite.com.au" target="_blank">Registration</a></li>
+        <li><a style="font-size: 20px" href="#">Videos</a></li>
       </ul>
     </div>
     <!-- ###### -->
@@ -66,19 +66,21 @@ tr:nth-child(even) {
       <!-- ####################################################################################################### -->
 		<div id="content" style="width:95%; text-align:center; margin:10px">
 
+<a href="https://www.youtube.com/watch?v=qCrVPTQL5YM" target="_blank">Full session video here</a><br><br>
+
 <div class="container" style="font-size:18px;">
 <table>
   <tr>
-    <th><a href="https://www.timeanddate.com/time/zones/utc" target="_blank">UTC time</a></th>
+    <th>Video and length (mm:ss)</th>
     <th>Speaker</th>
     <th>Topic</th>
   </tr>
   <tr>
-    <td>08:30</td>
+    <td><a class="a_link" href="https://www.youtube.com/watch?v=xQjHJJLBjSo" target="_blank">Video here</a><br>08:48</td>
     <td colspan="2"><b>Welcome and introduction</b></td>
   </tr>
   <tr>
-    <td rowspan="3">08:35</td>
+    <td rowspan="3"><br><br><a href="https://www.youtube.com/watch?v=BybClvqoAwI" target="_blank">Video 1 here</a><br>12:07<br><br><a href="https://www.youtube.com/watch?v=INhucm-FrEU" target="_blank">Video 2 here</a><br>09:06</td>
     <td rowspan="3" colspan="2"><b>Contribution talks - Session 1</b><br>
 <ul>
 <li><a href="submission_3.pdf" target="_blank">Should I Trust You? Incorporating Unreliable Expert Advice in Human-Agent Interaction</a><br><i>Tamlin Love, Ritesh Ajoodha and Benjamin Rosman</i>
@@ -88,77 +90,67 @@ tr:nth-child(even) {
 </tr><tr></tr><tr></tr>
 
   <tr>
-    <td>09:00</td>
+    <td><a class="a_link" href="https://www.youtube.com/watch?v=3q5Q8aw6HuY" target="_blank">Video here</a><br>31:50</td>
     <td><a class="a_link" href="speakers.html#pvamplew">Peter Vamplew</a></td>
     <td>Multiobjective Approaches to Human-Aligned Reinforcement Learning</td>
   </tr>
 
   <tr>
-    <td>09:30</td>
+    <td><a href="https://www.youtube.com/watch?v=kL5rvZFQfCk" target="_blank">Video here</a><br>31:33</td>
     <td><a href="speakers.html#cweber">Cornelius Weber</a></td>
     <td>Hybrid Neural Learning for Interactive Robots</td>
   </tr>
 
   <tr>
-    <td>10:00</td>
+    <td><a  class="a_link" href="https://www.youtube.com/watch?v=efLTuMYUAfs" target="_blank">Video here</a><br>30:22</td>
     <td><a class="a_link" href="speakers.html#brosman">Benjamin Rosman</a></td>
     <td>Modelling Imprecise Human Collaborators</td>
   </tr>
 
   <tr>
-    <td>10:30</td>
+    <td><a href="https://www.youtube.com/watch?v=s0z-6O6qWDo" target="_blank">Video here</a><br>28:17</td>
     <td><a href="speakers.html#jkober">Jens Kober</a></td>
     <td>Reinforcement Learning with Interactive Corrections</td>
   </tr>
 
   <tr>
-    <td>11:00</td>
-    <td colspan="2"><b>Break</b></td>
-  </tr>
-
-  <tr>
-    <td rowspan="3">11:15</td>
+    <td rowspan="3"><br><a class="a_link" href="https://www.youtube.com/watch?v=Xex4m_RcyPs" target="_blank">Video 1 here</a><br>08:50<br><br><a class="a_link" href="https://www.youtube.com/watch?v=GW8EGS85Ouk" target="_blank">Video 2 here</a><br>07:17</td>
     <td colspan="2" rowspan="3"><b>Contribution talks - Session 2</b>
 <ul>
-<li><a href="submission_6.pdf" target="_blank">Explanations In, Explanations Out: Human-in-the-Loop Social Navigation Learning</a><br><i>Jakob Karalus, Amar Halilovic and Felix Lindner</i>
+<li><a class="a_link" href="submission_6.pdf" target="_blank">Explanations In, Explanations Out: Human-in-the-Loop Social Navigation Learning</a><br><i>Jakob Karalus, Amar Halilovic and Felix Lindner</i>
 </li>
-<li><a href="submission_7.pdf" target="_blank">Learning Proxemic Behavior Using Reinforcement Learning with Cognitive Agents</a><br><i>Cristian Camilo Millán Arias, Bruno Fernandes and Francisco Cruz</i>
+<li><a class="a_link"  href="submission_7.pdf" target="_blank">Learning Proxemic Behavior Using Reinforcement Learning with Cognitive Agents</a><br><i>Cristian Camilo Millán Arias, Bruno Fernandes and Francisco Cruz</i>
 </li>
 </ul>
 </td>
   </tr><tr></tr><tr></tr>
 
   <tr>
-    <td>11:30</td>
-    <td><a class="a_link" href="speakers.html#rdazeley">Richard Dazeley</a></td>
+    <td><a href="https://www.youtube.com/watch?v=WYPBk6I7aFk" target="_blank">Video here</a><br>37:17</td>
+    <td><a href="speakers.html#rdazeley">Richard Dazeley</a></td>
     <td>Broad-XAI: Human-aligned conversational explanations</td>
   </tr>
 
   <tr>
-    <td>12:00</td>
-    <td><a href="speakers.html#asciutti">Alessandra Sciutti</a></td>
+    <td><a class="a_link" href="https://www.youtube.com/watch?v=z5Bt1F5EbvQ" target="_blank">Video here</a><br>28:39</td>
+    <td><a class="a_link" href="speakers.html#asciutti">Alessandra Sciutti</a></td>
     <td>More Humane Learning</td>
   </tr>
 
   <tr>
-    <td>12:30</td>
-    <td><a class="a_link" href="speakers.html#bfernandes">Bruno Fernandes</a></td>
+    <td><a href="https://www.youtube.com/watch?v=SZyZi41OL6Q" target="_blank">Video here</a><br>20:55</td>
+    <td><a href="speakers.html#bfernandes">Bruno Fernandes</a></td>
     <td>Reinforcement Learning for Robot Control and Interaction</td>
   </tr>
 
   <tr>
-    <td>13:00</td>
-    <td><a href="speakers.html#mtaylor">Matthew Taylor</a></td>
+    <td><a class="a_link" href="https://www.youtube.com/watch?v=D2S2_0BWvjk" target="_blank">Video here</a><br>32:55</td>
+    <td><a class="a_link" href="speakers.html#mtaylor">Matthew Taylor</a></td>
     <td>Agents learning from humans -- what the heck do you want me to do?</td>
   </tr>
 
   <tr>
-    <td>13:30</td>
-    <td colspan="2"><b>Break</b></td>
-  </tr>
-
-  <tr>
-    <td rowspan="3">13:45</td>
+    <td rowspan="3"><br><a href="https://www.youtube.com/watch?v=tdTFqMCdK9E" target="_blank">Video 1 here</a><br>11:36<br><br><a href="https://www.youtube.com/watch?v=1NDnuYejgQI" target="_blank">Video 2 here</a><br>07:28</td>
     <td colspan="2" rowspan="3"><b>Contribution talks - Session 3</b>
 <ul>
 <li><a href="submission_5.pdf" target="_blank">Policy Regularization for Legible Behavior</a><br><i>Michele Persiani</i>
@@ -169,31 +161,31 @@ tr:nth-child(even) {
   </tr><tr></tr><tr></tr>
 
   <tr>
-    <td>14:00</td>
+    <td><a class="a_link" href="https://www.youtube.com/watch?v=2OP2eywkTRo" target="_blank">Video here</a><br>25:01</td>
     <td><a class="a_link" href="speakers.html#gkonidaris">George Konidaris</a></td>
     <td>Grounded Symbolic Representations for Human-Robot Communication</td>
   </tr>
 
   <tr>
-    <td>14:30</td>
+    <td><a href="https://www.youtube.com/watch?v=RvweeB7-R90" target="_blank">Video here</a><br>31:44</td>
     <td><a href="speakers.html#wbknox">W. Bradley Knox</a></td>
     <td>Reward (Mis)design for Autonomous Driving</td>
   </tr>
 
   <tr>
-    <td>15:00</td>
+    <td><a class="a_link" href="https://www.youtube.com/watch?v=bZzhibuWmvo" target="_blank">Video here</a><br>25:47</td>
     <td><a class="a_link" href="speakers.html#ppilarski">Patrick Pilarski</a></td>
     <td>Constructivism in Tightly Coupled Human Machine Interfaces</td>
   </tr>
 
   <tr>
-    <td>15:30</td>
+    <td><a href="https://www.youtube.com/watch?v=xdDrdNG6eGg" target="_blank">Video here</a><br>30:57</td>
     <td><a href="speakers.html#fleno">Felipe Leno Da Silva</a></td>
     <td>Action Advising for Accelerating Multiagent Reinforcement Learning</td>
   </tr>
 
   <tr>
-    <td>16:00</td>
+    <td><a class="a_link" href="https://www.youtube.com/watch?v=w3EQ1zDItEA" target="_blank">Video here</a><br>03:41</td>
     <td colspan="2"><b>Farewell and conclusions</b></td>
   </tr>
 
