--- a/videos.html
+++ b/videos.html
@@ -52,8 +52,7 @@ tr:nth-child(even) {
 	<li><a style="font-size: 20px" href="organizers.html" data-target="organizers">Organizers</a></li>
         <li><a style="font-size: 20px" href="speakers.html" data-target="speakers">Speakers</a></li>
         <li><a style="font-size: 20px" href="cfp.html" data-target="cfp">Submissions</a></li>
-        <li><a style="font-size: 20px" href="program.html" data-target="program">Program</a></li>
-        <li><a style="font-size: 20px" href="#">Videos</a></li>
+        <li><a style="font-size: 20px" href="#">Workshop Sessions</a></li>
       </ul>
     </div>
     <!-- ###### -->
