--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ Licence URI: http://www.os-templates.com/template-terms
 	<li><a style="font-size: 20px" href="organizers.html" data-target="organizers">Organizers</a></li>
         <li><a style="font-size: 20px" href="speakers.html" data-target="speakers">Speakers</a></li>
         <li><a style="font-size: 20px" href="cfp.html" data-target="cfp">Submissions</a></li>
-        <li><a style="font-size: 20px" href="videos.html" data-target="videos">Workshop Sessions</a></li>
+        <li><a style="font-size: 20px" href="program.html">Program</a></li>
+        <li><a style="font-size: 20px" href="https://harlworkshop.github.io/2021">2021</a></li>
       </ul>
     </div>
     <!-- ###### -->
