--- a/program.html
+++ b/program.html
@@ -56,7 +56,7 @@ tr:nth-child(even) {
         <li><a style="font-size: 20px" href="speakers.html" data-target="speakers">Speakers</a></li>
         <li><a style="font-size: 20px" href="cfp.html" data-target="cfp">Submissions</a></li>
         <li><a style="font-size: 20px" href="program.html" data-target="program">Program</a></li>
-        <li><a style="font-size: 20px" href="https://harlworkshop.github.io/2021">2021</a></li>
+        <li><a style="font-size: 20px" href="https://harlworkshop.github.io/2021">2021@ICDL</a></li>
       </ul>
     </div>
     <!-- ###### -->
