--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <body id="top">
 
 <center>
-<img src="images/header_online.jpg" alt="Logo" height="276px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
+<img src="images/harl.png" alt="Logo" height="206px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
 
 <!-- ####################################################################################################### -->
 <div class="wrapper row2">
@@ -63,13 +63,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="container" style="text-align:justify; font-size:18px;">
 </br></br>
 
-<strong>Journal Special Issue:</strong></br></br>
-
-Contributors to the workshop will be invited to submit extended versions of the manuscripts to a topical collection (special issue) at <a href="https://www.springer.com/journal/521/updates/19055662" target="_blank">Neural Computing and Applications</a>.
-</br>Submissions will be peer reviewed consistent with the journal practices.
-</br></br>
-
-<strong>Workshop description:</strong></br></br>
+<strong>Workshop description (proposal under review):</strong></br></br>
 
 A slew of advances in the field of reinforcement learning (RL) have resulted in significant improvements in learning efficiency for autonomous agents and robots. 
 However, a vast majority of these works fail to consider human and other contextual factors, which are important to consider from a practical standpoint, in terms of increased trustworthiness in human-robot scenarios. 
@@ -81,15 +75,15 @@ Such performance measures improve the practical utility of RL and make it an inc
 <br/>
 <br/>
 <p align="center">
-<img src="images/display/two_naos.jpg" height="200" height="150"/>
 <img src="images/display/nao_selfie.jpg" height="200" height="150" />
+<img src="images/display/hri.jpg" height="200" height="150"/>
 <img src="images/display/swarm.jpg" height="200" height="150"/>
 </p>
 <br/>
 <br/>
 <br/>
 
-The focus of this (<b>full online</b>) workshop is to bring together researchers from the fields of robotics and RL to discuss and share state-of-the-art methods, challenges and novel solutions pertaining to the issue of incorporating human-related aspects into RL agents and robots. We hope to provide an opportunity to discuss fundamental current issues to be addressed in order to foster the presence of autonomous agents and robots in real-world scenarios as well as future research directions.
+The focus of this workshop is to bring together researchers from the fields of robotics and RL to discuss and share state-of-the-art methods, challenges and novel solutions pertaining to the issue of incorporating human-related aspects into RL agents and robots. We hope to provide an opportunity to discuss fundamental current issues to be addressed in order to foster the presence of autonomous agents and robots in real-world scenarios as well as future research directions.
 
 The main topics of interest in the call for submissions are explainability, interactivity, safety, and ethics in social robotics and autonomous agents especially from a reinforcement learning perspective.
 In this regard, approaches with special interest for this workshop are (but not limited to):
@@ -114,16 +108,16 @@ We particularly encourage authors to share their in-progress works in the form o
 <br/>
 <strong>Important dates:</strong></br></br>
 
-    Paper and extended abstract submission deadline:  <del>July 02, 2021</del> <b style="color:red">July 14, 2021</b> (23:59 <a href="https://www.timeanddate.com/time/zones/aoe" target="_blank">AoE</a>, <b style="color:red">extended deadline</b>)</br>
-    Notification of acceptance: July 30, 2021</br>
-    Camera-ready version: August 12, 2021 (23:59 <a href="https://www.timeanddate.com/time/zones/aoe" target="_blank">AoE</a>)</br>
-    Workshop: August 27, 2021 </br></br>
+    Paper and extended abstract submission deadline:  TBA </br>
+    Notification of acceptance: TBA </br>
+    Camera-ready version: TBA </br>
+    Workshop: TBA </br></br>
 
 </br>
-This is a <b>free event</b>. Click <a href="https://registrationharl.eventbrite.com.au" target="_blank">here</a> to register.<br><br>
-Selected contributions will be presented during the workshop as <b>online</b> spotlight talks. Accepted papers will be uploaded to the workshop website, but are free to appear in other journals or conference proceedings.</br></br>
+
+Selected contributions will be presented during the workshop as <b>in-person</b> spotlight talks. Accepted papers will be uploaded to the workshop website, but are free to appear in other journals or conference proceedings.</br></br>
 Contributors to the workshop will be invited to submit extended versions
-of the manuscripts to a <b>special issue</b> whose Call for Papers can be found <a href="https://www.springer.com/journal/521/updates/19055662" target="_blank">here</a>.<br/>
+of the manuscripts to a <b>special issue</b> whose Call for Papers will be appropriately disseminated here.<br/>
 Submissions will be peer reviewed consistent with the journal practices.
 <br/>
 <br/>
@@ -138,14 +132,16 @@ Submissions will be peer reviewed consistent with the journal practices.
 <div class="wrapper row4">
   <div class="rnd">
     <div id="footer" class="clear">
-      <p> Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots - In conjunction with <a target="blank" href="https://icdl-2021.org">IEEE ICDL 2021</a>
+      <p> Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots - Proposal under review
 <p>
 <div style="margin: auto;">
 	
-	<a target="blank" href="https://www.deakin.edu.au"><img src="images/deakin.PNG" alt="Deakin University" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.unsw.edu.au"><img src="images/unsw.png" alt="University of New South Wales Sydney" height="100px" width="auto" style="float: center; margin:10px;"></a>
 	<a target="blank" href="https://www.unab.cl"><img src="images/unab.PNG" alt="Universidad Andres Bello" height="80px" width="auto" style="float: center; margin:10px;"></a>
-	<a target="blank" href="https://www.iit.it"><img src="images/iit.PNG" alt="Istituto Italiano di Tecnologia" height="80px" width="auto" style="float: center; margin:10px;"></a>
-	<a target="blank" href="https://www.ucentral.cl"><img src="images/ucentral.jpg" alt="Universidad Central" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.deakin.edu.au"><img src="images/deakin.PNG" alt="Deakin University" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.monash.edu/"><img src="images/monash.png" alt="Monash University" height="70px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.ualberta.ca/index.html"><img src="images/ualberta.png" alt="University of Alberta" height="70px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.ucentral.cl"><img src="images/ucentral.jpg" alt="Universidad Central" height="70px" width="auto" style="float: center; margin:10px;"></a>
 	</div>
     </div>
   </div>
