--- a/organizers.html
+++ b/organizers.html
@@ -17,7 +17,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <body id="top">
 
 <center>
-<img src="images/header_online.jpg" alt="Logo" height="276px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
+<img src="images/harl.png" alt="Logo" height="206px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
 
 <!-- ####################################################################################################### -->
 <div class="wrapper row2">
@@ -50,12 +50,45 @@ Licence URI: http://www.os-templates.com/template-terms
 	<div style="border-top: solid 1px #323232; min-height: 180px;">
 		<img src="images/display/fcruz.jpg" alt="Francisco Cruz" height="155px" width="135px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
-			<strong><a href="http://www.franciscocruz.cl/" target="_blank">Francisco Cruz</br></a>
-			<a href="https://www.deakin.edu.au/information-technology" target="_blank">School of Information Technology</a></br>
-			<a href="https://www.deakin.edu.au" target="_blank">Deakin University</a></br>
+			<strong><a href="https://www.unsw.edu.au/staff/francisco-cruz-naranjo" target="_blank">Francisco Cruz</br></a>
+			<a href="https://www.unsw.edu.au/engineering/our-schools/computer-science-and-engineering" target="_blank">School of Computer Science and Engineering</a></br>
+			<a href="https://www.unsw.edu.au" target="_blank">University of New South Wales, Sydney</a></br>
 			Australia</br>
 			<a href="https://www.ucentral.cl/ucentral/site/edic/base/port/finarq.html" target="_blank">Escuela de Ingenieria, Universidad Central de Chile</a>, Chile</br></br>
-			francisco.cruz [at] deakin.edu.au</strong></br></br>
+			f.cruz [at] unsw.edu.au</strong></br></br>
+		</p>
+	</div>
+
+	<div style="border-top: solid 1px #323232; min-height: 180px;">
+		<img src="images/display/msolis.jpg" alt="Miguel Solis" height="155px" width="135px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<p style="text-align:justify;">
+			<strong><a href="http://www.miguelsolis.info" target="_blank">Miguel Solis</br></a>
+			<a href="https://facultades.unab.cl/ingenieria/carreras/ingenieria-automatizacion-robotica/" target="_blank">Facultad de Ingenieria</a></br>
+			<a href="https://www.unab.cl" target="_blank">Universidad Andres Bello</a></br>
+			Chile</br></br>
+			miguel.solis [at] unab.cl</strong></br></br>
+		</p>
+	</div>
+
+	<div style="border-top: solid 1px #323232; min-height: 180px;">
+		<img src="images/display/pcarreno.jpg" alt="Pamela Carreño-Medrano" height="155px" width="135px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<p style="text-align:justify;">
+			<strong><a href="https://www.monash.edu/engineering/pamelacarrenomedrano" target="_blank">Pamela Carreno-Medrano</br></a>
+			<a href="https://research.monash.edu/en/organisations/electrical-and-computer-systems-engineering" target="_blank">Electrical and Computer Systems Engineering</a></br>
+			<a href="https://www.monash.edu/" target="_blank">Monash University</a></br>
+			Australia</br></br>
+			pamela.carreno [at] monash.edu</strong></br></br>
+		</p>
+	</div>
+
+	<div style="border-top: solid 1px #323232; min-height: 180px;">
+		<img src="images/display/sdas.jpg" alt="Srijita Das" height="155px" width="135px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<p style="text-align:justify;">
+			<strong><a href="https://sites.google.com/view/srijitadas/" target="_blank">Srijita Das</br></a>
+			<a href="https://www.ualberta.ca/computing-science/index.html" target="_blank">Dept. of Computing Science</a></br>
+			<a href="https://www.ualberta.ca/index.html" target="_blank">University of Alberta</a></br>
+			Canada</br></br>
+			srijita1 [at] ualberta.ca</strong></br></br>
 		</p>
 	</div>
 
@@ -70,36 +103,6 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 	
-	<div style="border-top: solid 1px #323232; min-height: 180px;">
-		<img src="images/display/msolis.jpg" alt="Miguel Solis" height="155px" width="135px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://www.innovacionyrobotica.com/miguel.solis" target="_blank">Miguel Solis</br></a>
-			<a href="https://facultades.unab.cl/ingenieria/carreras/ingenieria-automatizacion-robotica/" target="_blank">Facultad de Ingenieria</a></br>
-			<a href="https://www.unab.cl" target="_blank">Universidad Andres Bello</a></br>
-			Chile</br></br>
-			miguel.solis [at] unab.cl</strong></br></br>
-		</p>
-	</div>
-
-	<div style="border-top: solid 1px #323232; min-height: 180px;">
-		<img src="images/display/pbarros.PNG" alt="Pablo Barros" height="155px" width="135px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="http://pablobarros.net" target="_blank">Pablo Barros</br></a>
-			<a href="https://www.iit.it/web/cognitive-architecture-for-collaborative-technologies" target="_blank">Cognitive Architecture for Collaborative Technologies Unit</a></br>
-			<a href="https://www.iit.it" target="_blank">Istituto Italiano di Tecnologia</a></br>
-			Italia</br></br>
-		</p>
-	</div>
-
-	<div style="border-top: solid 1px #323232; min-height: 180px;">
-		<img src="images/display/rdazeley.PNG" alt="Richard Dazeley" height="155px" width="135px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://www.deakin.edu.au/about-deakin/people/richard-dazeley" target="_blank">Richard Dazeley</br></a>
-			<a href="https://blogs.deakin.edu.au/mila/" target="_blank">Machine Intelligence Lab</a></br>
-			<a href="https://www.deakin.edu.au" target="_blank">Deakin University</a></br>
-			Australia</br></br>
-		</p>
-	</div>
 		
 </div>
 
@@ -112,14 +115,16 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper row4">
   <div class="rnd">
     <div id="footer" class="clear">
-      <p> Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots - In conjunction with <a target="blank" href="https://icdl-2021.org">IEEE ICDL 2021</a>
+      <p> Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots - Proposal under review
 <p>
 <div style="margin: auto;">
 	
-	<a target="blank" href="https://www.deakin.edu.au"><img src="images/deakin.PNG" alt="Deakin University" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.unsw.edu.au"><img src="images/unsw.png" alt="University of New South Wales Sydney" height="100px" width="auto" style="float: center; margin:10px;"></a>
 	<a target="blank" href="https://www.unab.cl"><img src="images/unab.PNG" alt="Universidad Andres Bello" height="80px" width="auto" style="float: center; margin:10px;"></a>
-	<a target="blank" href="https://www.iit.it"><img src="images/iit.PNG" alt="Istituto Italiano di Tecnologia" height="80px" width="auto" style="float: center; margin:10px;"></a>
-	<a target="blank" href="https://www.ucentral.cl"><img src="images/ucentral.jpg" alt="Universidad Central" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.deakin.edu.au"><img src="images/deakin.PNG" alt="Deakin University" height="80px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.monash.edu/"><img src="images/monash.png" alt="Monash University" height="70px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.ualberta.ca/index.html"><img src="images/ualberta.png" alt="University of Alberta" height="70px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.ucentral.cl"><img src="images/ucentral.jpg" alt="Universidad Central" height="70px" width="auto" style="float: center; margin:10px;"></a>
 	</div>
     </div>
   </div>
