--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ We particularly encourage authors to share their in-progress works in the form o
 
 </br>
 
-Selected contributions will be presented during the workshop as <b>in-person</b> spotlight talks. Accepted papers will be uploaded to the workshop website, but are free to appear in other journals or conference proceedings.</br></br>
+Selected contributions will be presented during the workshop either as oral presentations or in poster sessions. Accepted papers will be uploaded to the workshop website, but are free to appear in other journals or conference proceedings.</br></br>
 Contributors to the workshop will be invited to submit extended versions
 of the manuscripts to a <b>special issue</b> whose Call for Papers will be appropriately disseminated here.<br/>
 Submissions will be peer reviewed consistent with the journal practices.
