--- a/cfp.html
+++ b/cfp.html
@@ -51,8 +51,11 @@ where both pages limit include references. Submissions must be in PDF following 
 <br><br>Send your PDF manuscript through EasyChair: (to be announced)</br></br> 
 
 
-Selected contributions will be presented during the workshop as <b>online</b> spotlight talks. Accepted papers will be uploaded to the workshop website, but are free to appear in other journals or conference proceedings.</br></br>
-We particularly encourage authors to share their in-progress works in the form of extended abstracts and short papers.<br/></br>
+Selected contributions will be presented during the workshop either as oral presentations or in poster sessions. Accepted papers will be uploaded to the workshop website, but are free to appear in other journals or conference proceedings.</br></br>
+Contributors to the workshop will be invited to submit extended versions
+of the manuscripts to a <b>special issue</b> whose Call for Papers will be appropriately disseminated here.<br/>
+Submissions will be peer reviewed consistent with the journal practices.
+</br></br>
 
 <strong>Important dates:</strong></br></br>
 
