--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id="container " class="clear text-center">
       <!-- ####################################################################################################### -->
 		<div id="content" style="width:95%; text-align:center; margin:10px">
+			<strong>Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots</strong></br></br>
 <div class="container" style="text-align:justify; font-size:18px;">
 </br></br>
 
