--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Licence URI: http://www.os-templates.com/template-terms
   <div class="rnd">
     <div id="container " class="clear text-center">
       <!-- ####################################################################################################### -->
-		<div id="content" style="width:95%; text-align:center; margin:10px">
+		<div id="content" style="width:95%; text-align:center; font-size:18px; margin:10px">
 			<strong>Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots</strong></br></br>
 <div class="container" style="text-align:justify; font-size:18px;">
 </br></br>
