--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="container" style="text-align:justify; font-size:18px;">
 </br></br>
 
-<strong>Workshop description (proposal under review):</strong></br></br>
+<strong>Workshop description:</strong></br></br>
 
 A slew of advances in the field of reinforcement learning (RL) have resulted in significant improvements in learning efficiency for autonomous agents and robots. 
 However, a vast majority of these works fail to consider human and other contextual factors, which are important to consider from a practical standpoint, in terms of increased trustworthiness in human-robot scenarios. 
