--- a/organizers.html
+++ b/organizers.html
@@ -85,10 +85,9 @@ Licence URI: http://www.os-templates.com/template-terms
 		<img src="images/display/sdas.jpg" alt="Srijita Das" height="155px" width="135px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://sites.google.com/view/srijitadas/" target="_blank">Srijita Das</br></a>
-			<a href="https://www.ualberta.ca/computing-science/index.html" target="_blank">Dept. of Computing Science</a></br>
-			<a href="https://www.ualberta.ca/index.html" target="_blank">University of Alberta</a></br>
+			<a href="https://umdearborn.edu/" target="_blank">University of Michigan at Dearborn</a></br>
 			Canada</br></br>
-			srijita1 [at] ualberta.ca</strong></br></br>
+			sridas [at] umich.edu</strong></br></br>
 		</p>
 	</div>
 
