--- a/organizers.html
+++ b/organizers.html
@@ -86,7 +86,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		<p style="text-align:justify;">
 			<strong><a href="https://sites.google.com/view/srijitadas/" target="_blank">Srijita Das</br></a>
 			<a href="https://umdearborn.edu/" target="_blank">University of Michigan at Dearborn</a></br>
-			Canada</br></br>
+			Michigan, United States</br></br>
 			sridas [at] umich.edu</strong></br></br>
 		</p>
 	</div>
