--- a/organizers.html
+++ b/organizers.html
@@ -95,7 +95,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		<img src="images/display/tkarimpanal.PNG" alt="Thommen George Karimpanal" height="155px" width="135px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.thommengk.com/" target="_blank">Thommen George Karimpanal</br></a>
-			<a href="https://www.deakin.edu.au/a2i2" target="_blank">Applied Artificial Intelligence Institute</a></br>
+			<a href="https://www.deakin.edu.au/information-technology" target="_blank">School of IT</a></br>
 			<a href="https://www.deakin.edu.au" target="_blank">Deakin University</a></br>
 			Australia</br></br>
 			thommen.karimpanalgeorge [at] deakin.edu.au</strong></br></br>
