--- a/organizers.html
+++ b/organizers.html
@@ -85,6 +85,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		<img src="images/display/sdas.jpg" alt="Srijita Das" height="155px" width="135px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://sites.google.com/view/srijitadas/" target="_blank">Srijita Das</br></a>
+			<a href="https://umdearborn.edu/cecs/departments/computer-and-information-science" target="_blank">Computer and Information Sciences</a></br>
 			<a href="https://umdearborn.edu/" target="_blank">University of Michigan at Dearborn</a></br>
 			Michigan, United States</br></br>
 			sridas [at] umich.edu</strong></br></br>
