--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Licence URI: http://www.os-templates.com/template-terms
 			<strong>Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots</strong></br>
 			Endorsed by <a href="https://www.ieee-ras.org/cognitive-robotics" target="_blank">TC-CoRo</a>, <a href="https://www.ieee-ras.org/machine-learning-for-automation" target="_blank">TC-MCfA</a> and <a href="https://www.ieee-ras.org/energy-environment-and-safety-issues-in-robotics-and-automation" target="_blank">TC-EESI</a></br>
 			May 13th or May 17th, 2024 - Yokohama, Japan <br/>
-			Proposal under review at <a href="https://2024.ieee-icra.org/" target="_blank">ICRA 2024</a>
+			Accepted at <a href="https://2024.ieee-icra.org/" target="_blank">ICRA 2024</a>
 <div class="container" style="text-align:justify; font-size:18px;">
 </br></br>
 
