--- a/cfp.html
+++ b/cfp.html
@@ -17,7 +17,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <body id="top">
 
 <center>
-<img src="images/harl.png" alt="Logo" height="206px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
+<img src="images/harl_icra2024.jpeg" alt="Logo" height="206px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
 
 <!-- ####################################################################################################### -->
 <div class="wrapper row2">
@@ -59,10 +59,10 @@ Submissions will be peer reviewed consistent with the journal practices.
 
 <strong>Important dates:</strong></br></br>
 
-    Paper and extended abstract submission deadline:  TBA</br>
-    Notification of acceptance: TBA</br>
-    Camera-ready version: TBA</br>
-    Workshop: TBA </br></br>
+    Paper and extended abstract submission deadline: February 26, 2024. </br>
+    Notification of acceptance: April 5, 2024. </br>
+    Camera-ready version: April 29, 2024. </br>
+    Workshop: TBD (between 13th-17th May, 2024). </br></br>
 
 </br>
 <strong>Journal Special Issue:</strong></br></br>
