--- a/organizers.html
+++ b/organizers.html
@@ -17,7 +17,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <body id="top">
 
 <center>
-<img src="images/harl.png" alt="Logo" height="206px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
+<img src="images/harl_icra2024.jpeg" alt="Logo" height="206px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
 
 <!-- ####################################################################################################### -->
 <div class="wrapper row2">
@@ -112,7 +112,30 @@ Licence URI: http://www.os-templates.com/template-terms
   </div>
 </div>
 <!-- ####################################################################################################### -->
+
 <div class="wrapper row4">
+  <div class="rnd">
+    <div id="container " class="clear text-center">
+      <!-- ####################################################################################################### -->
+		<div id="content" style="width:95%; text-align:center; margin:10px">
+
+
+<div class="container" style="font-size:18px;">
+	<p><b>Technical Committee:</b></p>
+	<p style="text-align:left"> 
+	<div style="border-top: solid 1px #323232; min-height: 180px;">
+		<p>Kun Chu</p>
+		<p style="text-align:justify;">University of Hamburg </p>
+	</div>
+
+</div>
+
+</div>
+</div>
+</div>
+</div>
+	
+<div class="wrapper row5">
   <div class="rnd">
     <div id="footer" class="clear">
       <p> Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots
