--- a/organizers.html
+++ b/organizers.html
@@ -121,11 +121,13 @@ Licence URI: http://www.os-templates.com/template-terms
 
 
 <div class="container" style="font-size:18px;">
-	<p><b>Technical Committee:</b></p>
+	<p><b>Technical Committee</b></p>
 	<p style="text-align:left"> 
 	<div style="border-top: solid 1px #323232; min-height: 180px;">
-		<p>Kun Chu</p>
-		<p style="text-align:justify;">University of Hamburg </p>
+		<table>
+			<tr><th>Name</th><th>Affiliation</th></tr>
+			<tr><td>Kun Chu</td><td>University of Hamburg</td></ts></tr>
+		</table>
 	</div>
 
 </div>
