--- a/organizers.html
+++ b/organizers.html
@@ -145,9 +145,27 @@ tr:nth-child(even) {
 	<p style="text-align:left"> 
 	<div style="border-top: solid 1px #323232; min-height: 180px;">
 		<table>
-			<tr><th>Name</th><th>Affiliation</th></tr>
-			<tr><td>Kun Chu</td><td>University of Hamburg</td></ts></tr>
-			<tr><td>Josip Josifovski</td><td>Technical University of Munich</td></tr>
+			<tr><th>Name</th><th>Affiliation</th><th>Country</th></tr>
+			<tr><td>Kun Chu</td><td>University of Hamburg</td><td>Germany</td></tr>
+			<tr><td>Josip Josifovski</td><td>Technical University of Munich</td><td>Germany</td></tr>
+			<tr><td>Nicolas Navarro-Guerrero</td><td>Leibniz Universität Hannover</td><td>Germany</td></tr>
+			<tr><td>Bruno Lara</td><td>Universidad Autónoma del Estado de Morelos</td><td>Mexico</td></tr>
+			<tr><td>Igor Farkas</td><td>Comenius University</td><td>Slovakia</td></tr>
+			<tr><td>Shadi Abpeikar</td><td>UNSW Canberra</td><td>Australia</td></tr>
+			<tr><td>Doreen Jirak</td><td>Italian Institute of Technology</td><td>Italy</td></tr>
+			<tr><td>Cameron Foale</td><td>Federation University</td><td>Australia</td></tr>
+			<tr><td>Yifei Chen</td><td>University of Groningen</td><td>The Netherlands</td></tr>
+			<tr><td>Angel Ayala</td><td>University of Pernambuco</td><td>Brazil</td></tr>
+			<tr><td>Nikhil Churamani</td><td>University of Cambridge</td><td>UK</td></tr>
+			<tr><td>Ozan Özdemir</td><td>University of Hamburg</td><td>Germany</td></tr>
+			<tr><td>German Castro</td><td>UNSW Sydney</td><td>Australia</td></tr>
+			<tr><td>Yigit Yildirim</td><td>Bogazici University</td><td>Turkey</td></tr>
+			<tr><td>Lorenzo Jamone</td><td>Queen Mary University of London </td><td>UK</td></tr>
+			<tr><td>Ajsal Shereef</td><td>Deakin University</td><td>Australia</td></tr>
+			<tr><td>Buddhika Laknath Semage</td><td>Deakin University</td><td>Australia</td></tr>
+			<tr><td>Eduardo Benitez Sandoval</td><td>UNSW Sydney</td><td>Australia</td></tr>
+			<tr><td>Haddie Harland</td><td>Deakin University</td><td>Australia</td></tr>
+			<tr><td>Tamlin Love</td><td>Institut de Robòtica i Informàtica Industrial</td><td>Spain</td></tr>
 		</table>
 	</div>
 
