--- a/program.html
+++ b/program.html
@@ -52,7 +52,7 @@ tr:nth-child(even) {
     <div id="topnav">
       <ul>
         <li><a style="font-size: 20px" href="index.html" data-target="home">Home</a></li>
-	<li><a style="font-size: 20px" href="organizers.html" data-target="organizers">Organizers</a></li>
+	<li><a style="font-size: 20px" href="organizers.html" data-target="organizers">Committee</a></li>
         <li><a style="font-size: 20px" href="speakers.html" data-target="speakers">Speakers</a></li>
         <li><a style="font-size: 20px" href="cfp.html" data-target="cfp">Submissions</a></li>
         <li><a style="font-size: 20px" href="program.html" data-target="program">Program</a></li>
