--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		<div id="content" style="width:95%; text-align:center; font-size:18px; margin:10px">
 			<strong>Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots</strong></br>
 			Endorsed by <a href="https://www.ieee-ras.org/cognitive-robotics" target="_blank">TC-CoRo</a>, <a href="https://www.ieee-ras.org/machine-learning-for-automation" target="_blank">TC-MCfA</a> and <a href="https://www.ieee-ras.org/energy-environment-and-safety-issues-in-robotics-and-automation" target="_blank">TC-EESI</a></br>
-			May 13th or May 17th, 2024 - Yokohama, Japan <br/>
+			May 17th, 2024 - Yokohama, Japan <br/>
 			Accepted at <a href="https://2024.ieee-icra.org/" target="_blank">ICRA 2024</a>
 <div class="container" style="text-align:justify; font-size:18px;">
 </br></br>
@@ -115,7 +115,7 @@ We particularly encourage authors to share their in-progress works in the form o
     Paper and extended abstract submission deadline: February 26, 2024. </br>
     Notification of acceptance: April 5, 2024. </br>
     Camera-ready version: April 29, 2024. </br>
-    Workshop: TBD (between 13th-17th May, 2024). </br></br>
+    Workshop: May 17, 2024. </br></br>
 
 </br>
 
