--- a/cfp.html
+++ b/cfp.html
@@ -82,7 +82,7 @@ Submissions will be peer reviewed consistent with the journal practices.
     Paper and extended abstract submission deadline: February 26, 2024. </br>
     Notification of acceptance: April 5, 2024. </br>
     Camera-ready version: April 29, 2024. </br>
-    Workshop: TBD (between 13th-17th May, 2024). </br></br>
+    Workshop: May 17, 2024. </br></br>
 
 </br>
 <strong>Journal Special Issue:</strong></br></br>
