--- a/speakers.html
+++ b/speakers.html
@@ -68,13 +68,13 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
-	<div id="dsadigh" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/dsadigh.jpg" alt="Benjamin Rosman" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+	<div id="euchibe" style="border-top: solid 1px #323232; min-height: 250px;">
+		<img src="images/display/uchibe_face.JPG" alt="Eiji Uchibe" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
-			<strong><a href="https://profiles.stanford.edu/dorsa-sadigh" target="_blank">Dorsa Sadigh</a></br>
-			<a href="https://hai.stanford.edu/" target="_blank">Institute for Human-Centered Artificial Intelligence</a><br/><a href="https://www.stanford.edu/" target="_blank">Stanford University</a></br></br>
+			<strong><a href="https://researchmap.jp/uchibe/?lang=english" target="_blank">Eiji Uchibe</a></br>
+			<a href="https://bicr.atr.jp/en/" target="_blank">Dept. of Brain Robot Interface,</a><br/><a href="https://www.atr.jp/index_e.html" target="_blank">Advanced Telecommunications Research Institute International</a></br></br>
 			</strong></br>
-			<b>Aligning Robots with Human Preferences</b>
+			<b>Human-in-the-loop Policy Learning by Co-Evolution of Human and Generative Imitation Learning</b>
                         </br> 
 		</p>
 	</div>
