--- a/organizers.html
+++ b/organizers.html
@@ -167,6 +167,9 @@ tr:nth-child(even) {
 			<tr><td>Eduardo Benitez Sandoval</td><td>UNSW Sydney</td><td>Australia</td></tr>
 			<tr><td>Haddie Harland</td><td>Deakin University</td><td>Australia</td></tr>
 			<tr><td>Tamlin Love</td><td>Institut de Robòtica i Informàtica Industrial</td><td>Spain</td></tr>
+			<tr><td>Su Zhang</td><td>Washington State University</td><td>United States</td></tr>
+			<tr><td>Calarina Muslimani</td><td>University of Alberta</td><td>Canada</td></tr>
+			<tr><td>Steven James</td><td>University of the Witwatersrand</td><td>South Africa</td></tr>
 		</table>
 	</div>
 
