--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ We particularly encourage authors to share their in-progress works in the form o
 <br/>
 <strong>Important dates:</strong></br></br>
 
-    Paper and extended abstract submission deadline: February 26, 2024. </br>
+    Paper and extended abstract submission deadline:   <del>February 26, 2024</del> <b style="color:red">March 04, 2024</b> (23:59 <a href="https://www.timeanddate.com/time/zones/aoe" target="_blank">AoE</a>, <b style="color:red">extended deadline</b>)</br>
     Notification of acceptance: April 5, 2024. </br>
     Camera-ready version: April 29, 2024. </br>
     Workshop: May 17, 2024. </br></br>
