--- a/speakers.html
+++ b/speakers.html
@@ -79,17 +79,6 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
-	<div id="pbarros" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/pbarros.PNG" alt="Jens Kober" height="200px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://scholar.google.com/citations?user=LU9tpkMAAAAJ&hl=en" target="_blank">Pablo Barros</a></br>
-			<a href="https://www.sony.com/en/SonyInfo/research/about/brussels-laboratory/" target="_blank">Brussels Laboratory</a><br/><a href="https://www.sony.com/" target="_blank">Sony Corporation</a></br></br>
-			</strong></br>
-			<b>The Emergence of Social Characteristics on Competitive Agents Modulated by Learning Strategies</b>
-                        </br> 
-		</p>
-	</div>
-
 	<div id="mgombolay" style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/mgombolay.jpg" alt="Matthew Gombolay" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
@@ -109,7 +98,33 @@ Licence URI: http://www.os-templates.com/template-terms
   </div>
 </div>
 <!-- ####################################################################################################### -->
+
 <div class="wrapper row4">
+  <div class="rnd">
+    <div id="container " class="clear text-center">
+      <!-- ####################################################################################################### -->
+		<div id="content" style="width:95%; text-align:center; margin:10px">
+
+
+<div class="container" style="font-size:18px;">
+	<p><b>Discussion Panel</b></p>
+	<p style="text-align:left"> 
+	<div style="border-top: solid 1px #323232; min-height: 180px;">
+		<table>
+			<tr><th>Name</th><th>Affiliation</th></tr>
+			<tr><td>Pablo Barros</td><td>Brussels Laboratory, Sony Corporation</td></tr>
+			<tr><td>Eiji Uchibe</td><td>Dept. of Brain Robot Interface, Advanced Telecommunications Research Institute International</td></tr>
+		</table>
+	</div>
+
+</div>
+
+</div>
+</div>
+</div>
+</div>
+	
+<div class="wrapper row5">
   <div class="rnd">
     <div id="footer" class="clear">
       <p> Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots
