--- a/cfp.html
+++ b/cfp.html
@@ -67,7 +67,7 @@ Prospective participants in the workshop are required to submit a contribution a
     - Extended abstract (max 2 pages)</br>
     - Full paper (max 6 pages with no page-limit for references)</br></br>
 
-where both pages limit include references. Submissions must be in PDF following the <a href="http://ras.papercept.net/conferences/support/support.php" target="_blank">IEEE conference style in two-columns</a> (also available <a href="https://www.overleaf.com/latex/templates/ieee-conference-template/grfzhhncsfqn" target="_blank">on Overleaf</a>), and they will follow a single blind review process.
+Submissions must be in PDF following the <a href="http://ras.papercept.net/conferences/support/support.php" target="_blank">IEEE conference style in two-columns</a> (also available <a href="https://www.overleaf.com/latex/templates/ieee-conference-template/grfzhhncsfqn" target="_blank">on Overleaf</a>), and they will follow a single blind review process.
 <br><br>Send your PDF manuscript through EasyChair: <a href="https://easychair.org/my/conference?conf=harl2024" target="_blank">here</a>.</br></br> 
 
 
