--- a/organizers.html
+++ b/organizers.html
@@ -170,6 +170,10 @@ tr:nth-child(even) {
 			<tr><td>Su Zhang</td><td>Washington State University</td><td>United States</td></tr>
 			<tr><td>Calarina Muslimani</td><td>University of Alberta</td><td>Canada</td></tr>
 			<tr><td>Steven James</td><td>University of the Witwatersrand</td><td>South Africa</td></tr>
+			<tr><td>Michael Burke</td><td>Monash University</td><td>Australia</td></tr>
+			<tr><td>Leimin Tian</td><td>Monash University</td><td>Australia</td></tr>
+			<tr><td>Lingheng Meng</td><td>Monash University</td><td>Australia</td></tr>
+			<tr><td>Xin Hao</td><td>Deakin University</td><td>Australia</td></tr>
 		</table>
 	</div>
 
