--- a/speakers.html
+++ b/speakers.html
@@ -110,6 +110,17 @@ tr:nth-child(even) {
 		</p>
 	</div>
 
+		<div id="pulkit" style="border-top: solid 1px #323232; min-height: 250px;">
+		<img src="images/display/pulkit.jpg" alt="Pulkit Agrawal" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<p style="text-align:justify;">
+			<strong><a href="https://people.csail.mit.edu/pulkitag/" target="_blank">Pulkit Agrawal</a></br>
+			<a href="https://www.csail.mit.edu/" target="_blank">Computer Science and Artificial Intelligence Lab</a><br/><a href="https://www.mit.edu/" target="_blank">Massachusetts Institute of Technology</a></br></br>
+			</strong></br>
+			<b>Human-in-the-loop Sensorimotor Learning</b>
+                        </br> 
+		</p>
+	</div>
+
 </div>
 
 		</div>
