--- a/program.html
+++ b/program.html
@@ -77,27 +77,22 @@ This is a tentative program prone to modifications upon comments after review pr
     <th>Activity</th>
   </tr>
   <tr>
-    <td><b>08:15-08:30</b></td>
+    <td><b>09:00-09:15</b></td>
     <td>Welcome and introduction</td>
   </tr>
   <tr>
-    <td><b>08:30-09:15</b></td>
-    <td>Invited Talk #1</td>
-  </tr>
-
-  <tr>
     <td><b>09:15-10:00</b></td>
-    <td>Invited Talk #2</td>
+    <td>Invited Talk #1</td>
   </tr>
 
   <tr>
     <td><b>10:00-10:30</b></td>
     <td>Coffee break and poster session</td>
-  </tr>
-
+  </tr>	
+	
   <tr>
     <td><b>10:30-11:15</b></td>
-    <td>Contribution Talks #1</td>
+    <td>Invited Talk #2</td>
   </tr>
 
   <tr>
@@ -109,34 +104,34 @@ This is a tentative program prone to modifications upon comments after review pr
     <td><b>12:00-13:30</b></td>
     <td>Lunch Break</td>
   </tr>
+	
+  <tr>
+    <td><b>13:30-14:00</b></td>
+    <td>Contribution Talks</td>
+  </tr>
 
   <tr>
-    <td><b>13:30-14:15</b></td>
+    <td><b>13:30-14:45</b></td>
     <td>Invited Talk #4</td>
   </tr>
 
   <tr>
-    <td><b>14:15-15:00</b></td>
+    <td><b>14:45-15:30</b></td>
     <td>Invited Talk #5</td>
   </tr>
 
   <tr>
-    <td><b>15:00-15:30</b></td>
+    <td><b>15:30-16:00</b></td>
     <td>Coffee break and poster session</td>
   </tr>
 
   <tr>
-    <td><b>15:30-16:15</b></td>
-    <td>Contribution Talks #2</td>
-  </tr>
-
-  <tr>
-    <td><b>16:15-17:15</td>
+    <td><b>16:00-16:45</td>
     <td>Panel Discussion</td>
   </tr>
 
   <tr>
-    <td><b>17:15-17:30</b></td>
+    <td><b>16:45-17:00</b></td>
     <td>Farewell and conclusions</td>
   </tr>
 
