--- a/speakers.html
+++ b/speakers.html
@@ -145,6 +145,7 @@ tr:nth-child(even) {
 			<tr><th>Name</th><th>Affiliation</th></tr>
 			<tr><td>Pablo Barros</td><td>Brussels Laboratory, Sony Corporation</td></tr>
 			<tr><td>Eiji Uchibe</td><td>Dept. of Brain Robot Interface, Advanced Telecommunications Research Institute International</td></tr>
+			<tr><td>Priya Sundaresan</td><td>Computer Science, Stanford</td></tr>
 		</table>
 	</div>
 
