--- a/speakers.html
+++ b/speakers.html
@@ -121,6 +121,17 @@ tr:nth-child(even) {
 		</p>
 	</div>
 
+	<div id="dana" style="border-top: solid 1px #323232; min-height: 250px;">
+		<img src="images/display/dkulic.jpg" alt="Dana Kulić" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<p style="text-align:justify;">
+			<strong><a href="https://scholar.google.com/citations?user=sL0KJlQAAAAJ" target="_blank">Dana Kulić</a></br>
+			<a href="https://www.monash.edu/engineering/robotics" target="_blank">Monash Robotics.</a><br/><a href="https://www.monash.edu/" target="_blank">Monash University</a></br></br>
+			</strong></br>
+			<b>To be announced</b>
+                        </br> 
+		</p>
+	</div>
+	
 </div>
 
 		</div>
