--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ Submissions will be peer reviewed consistent with the journal practices.
 	<a target="blank" href="https://www.monash.edu/"><img src="images/monash.png" alt="Monash University" height="70px" width="auto" style="float: center; margin:10px;"></a></br>
 	<a target="blank" href="https://umdearborn.edu/"><img src="images/michigan-dearborn.png" alt="University of Michigan at Dearborn" height="80px" width="auto" style="float: center; margin:10px;"></a>
 	<a target="blank" href="https://www.deakin.edu.au"><img src="images/deakin.PNG" alt="Deakin University" height="80px" width="auto" style="float: center; margin:10px;"></a>
-	<a target="blank" href="https://www.ucentral.cl"><img src="images/ucentral.jpg" alt="Universidad Central" height="70px" width="auto" style="float: center; margin:10px;"></a>
+	<a target="blank" href="https://www.ucentral.cl"><img src="images/ucen.png" alt="Universidad Central" height="70px" width="auto" style="float: center; margin:10px;"></a>
 	</div>
     </div>
   </div>
