georgia's tentative title

--- a/speakers.html
+++ b/speakers.html
@@ -72,7 +72,7 @@ tr:nth-child(even) {
 			<strong><a href="https://www.ias.informatik.tu-darmstadt.de/Team/GeorgiaChalvatzaki" target="_blank">Georgia Chalvatzaki</a></br>
 			<a href="https://irosalab.com/" target="_blank">Interactive Robot Perception and Learning Lab</a></br><a href="https://www.tu-darmstadt.de/" target="_blank">TU Darmstadt</a></br></br>
 			</strong></br>
-			<b>To be announced</b>
+			<b>Safe and Coordinated Human-Robot Interactions</b>
                         </br> 
 		</p>
 	</div>
