--- a/program.html
+++ b/program.html
@@ -70,34 +70,48 @@ tr:nth-child(even) {
 		<div id="content" style="width:95%; text-align:center; margin:10px">
 
 <div class="container" style="font-size:18px;">
-This is a tentative program prone to modifications upon comments after review process.<br><br>
+This workshop will be held at F203 at Annex Hall.<br>
+See the program for the whole conference <a href="https://2024.ieee-icra.org/program/" target="_blank">here</a><br><br>
 <table>
   <tr>
     <th><a href="https://www.timeanddate.com/worldclock/japan/yokohama" target="_blank">Yokohama timezone</a></th>
-    <th>Activity</th>
+    <th>Speaker</th>
+    <th>Topic</th>
   </tr>
   <tr>
     <td><b>09:00-09:15</b></td>
-    <td>Welcome and introduction</td>
+    <td colspan="2">Welcome and introduction</td>
   </tr>
   <tr>
     <td><b>09:15-10:00</b></td>
-    <td>Invited Talk #1</td>
+    <td><a href="speakers.html#gchalvatzaki">Georgia Chalvatzaki</a></td>
+    <td>Safe and Coordinated Human-Robot Interactions</td>
   </tr>
 
   <tr>
     <td><b>10:00-10:30</b></td>
-    <td>Coffee break and poster session</td>
+    <td colspan="2" rowspan="8">Coffee break and poster session</td>
+   <ul>
+    <li><a href="2024/submission_2.pdf" target="_blank">NLBAC: A Neural Ordinary Differential Equations-based Framework for Stable and Safe Reinforcement Learning in Human-aligned Tasks</a></li>
+    <li><a href="2024/submission_3.pdf" target="_blank">Safety Optimized Reinforcement Learning via Multi-Objective Policy Optimization</a></li>	  
+    <li><a href="2024/submission_4.pdf" target="_blank">Zero-shot Personalisation via Dynamic Policy Fusion</a></li>
+    <li><a href="2024/submission_5.pdf" target="_blank">Contextual Affordances for Safe Exploration in Robotic Scenarios</a></li>
+    <li><a href="2024/submission_8.pdf" target="_blank">Adaptive Human-Aware Local Planner with Reinforcement Learning</a></li>	  
+    <li><a href="2024/submission_9.pdf" target="_blank">Imperfect Dataset is Enough: Reinforcement Learning with Selective Imitation from Prior Data</a></li>
+    <li><a href="2024/submission_10.pdf" target="_blank">OffNav: Offline Reinforcement Learning for Visual Semantic Navigation</a></li>	  
+   </ul>
   </tr>	
 	
   <tr>
     <td><b>10:30-11:15</b></td>
-    <td>Invited Talk #2</td>
+    <td><a href="speakers.html#mgombolay">Matthew Gombolay</a></td>
+    <td>Interpretable and Interactive Reinforcement Learning in Human-Robot Teaming</td>
   </tr>
 
   <tr>
     <td><b>11:15-12:00</b></td>
-    <td>Invited Talk #3</td>
+    <td><a href="speakers.html#dana">Dana Kulić</a></td>
+	<td>To be announced</td>  
   </tr>
 
   <tr>
@@ -107,22 +121,38 @@ This is a tentative program prone to modifications upon comments after review pr
 	
   <tr>
     <td><b>13:30-14:00</b></td>
-    <td>Contribution Talks</td>
+    <td colspan="2" rowspan="4">Contribution Talks</td>
+	  <ul>
+		  <li><a href="2024/submission_1.pdf" target="_blank">Towards Interpretable Reinforcement Learning with Constrained Normalizing Flow Policies</a></li>
+		  <li><a href="2024/submission_6.pdf" target="_blank">Adaptive Robot Navigation: A Human-Centered and Multi-Objective Approach with Demonstrations</a></li>
+		  <li><a href="2024/submission_7.pdf" target="_blank">Learning Interactive Viewpoint Planning for Foresighted Object Discovery Considering Human Preferences</a></li>
+	  </ul>
   </tr>
 
   <tr>
     <td><b>14:00-14:45</b></td>
-    <td>Invited Talk #4</td>
+<td><a href="speakers.html#euchibe">Eiji Uchibe</a></td>
+    <td>Human-in-the-loop Policy Learning by Co-Evolution of Human and Generative Imitation Learning</td>
   </tr>
 
   <tr>
     <td><b>14:45-15:30</b></td>
-    <td>Invited Talk #5</td>
+    <td><a href="speakers.html#pulkit" target="_blank">Pulkit Agrawal</a></td>
+    <td>Human-in-the-loop Sensorimotor Learning</td>
   </tr>
 
   <tr>
     <td><b>15:30-16:00</b></td>
-    <td>Coffee break and poster session</td>
+    <td colspan="2" rowspan="8">Coffee break and poster session</td>
+   <ul>
+    <li><a href="2024/submission_2.pdf" target="_blank">NLBAC: A Neural Ordinary Differential Equations-based Framework for Stable and Safe Reinforcement Learning in Human-aligned Tasks</a></li>
+    <li><a href="2024/submission_3.pdf" target="_blank">Safety Optimized Reinforcement Learning via Multi-Objective Policy Optimization</a></li>	  
+    <li><a href="2024/submission_4.pdf" target="_blank">Zero-shot Personalisation via Dynamic Policy Fusion</a></li>
+    <li><a href="2024/submission_5.pdf" target="_blank">Contextual Affordances for Safe Exploration in Robotic Scenarios</a></li>
+    <li><a href="2024/submission_8.pdf" target="_blank">Adaptive Human-Aware Local Planner with Reinforcement Learning</a></li>	  
+    <li><a href="2024/submission_9.pdf" target="_blank">Imperfect Dataset is Enough: Reinforcement Learning with Selective Imitation from Prior Data</a></li>
+    <li><a href="2024/submission_10.pdf" target="_blank">OffNav: Offline Reinforcement Learning for Visual Semantic Navigation</a></li>	  
+   </ul>
   </tr>
 
   <tr>
