--- a/program.html
+++ b/program.html
@@ -89,7 +89,7 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
   </tr>
 
   <tr>
-    <td><b>10:00-10:30</b></td>
+    <td rowspan="8"><b>10:00-10:30</b></td>
     <td colspan="2" rowspan="8">Coffee break and poster session</td>
    <ul>
     <li><a href="2024/submission_2.pdf" target="_blank">NLBAC: A Neural Ordinary Differential Equations-based Framework for Stable and Safe Reinforcement Learning in Human-aligned Tasks</a></li>
@@ -120,7 +120,7 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
   </tr>
 	
   <tr>
-    <td><b>13:30-14:00</b></td>
+    <td rowspan="4"><b>13:30-14:00</b></td>
     <td colspan="2" rowspan="4">Contribution Talks</td>
 	  <ul>
 		  <li><a href="2024/submission_1.pdf" target="_blank">Towards Interpretable Reinforcement Learning with Constrained Normalizing Flow Policies</a></li>
@@ -142,7 +142,7 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
   </tr>
 
   <tr>
-    <td><b>15:30-16:00</b></td>
+    <td rowspan="8"><b>15:30-16:00</b></td>
     <td colspan="2" rowspan="8">Coffee break and poster session</td>
    <ul>
     <li><a href="2024/submission_2.pdf" target="_blank">NLBAC: A Neural Ordinary Differential Equations-based Framework for Stable and Safe Reinforcement Learning in Human-aligned Tasks</a></li>
